// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RectificationsProvider should have correct state after fetching all rectifications 1`] = `
Object {
  "data": Array [
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:24 GMT",
      "id": 1,
      "request_reason": "The data was incorrect.",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:37 GMT",
      "id": 2,
      "request_reason": "The data was incorrect two.",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:43 GMT",
      "id": 3,
      "request_reason": "The data was incorrect two three.",
    },
  ],
  "paging": Object {
    "current": 1,
    "total": 2,
  },
}
`;

exports[`RectificationsProvider should have correct state after fetching all rectifications 2`] = `
Object {
  "data": Array [
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:24 GMT",
      "id": 4,
      "request_reason": "The data was incorrect.",
      "status": "APPROVED",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:37 GMT",
      "id": 5,
      "request_reason": "The data was incorrect two.",
      "status": "DISAPPROVED",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:43 GMT",
      "id": 6,
      "request_reason": "The data was incorrect two three.",
      "status": "APPROVED",
    },
  ],
  "paging": Object {
    "current": 1,
    "total": 2,
  },
}
`;

exports[`RectificationsProvider should have correct state after fetching pending rectifications 1`] = `
Object {
  "data": Array [
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:24 GMT",
      "id": 1,
      "request_reason": "The data was incorrect.",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:37 GMT",
      "id": 2,
      "request_reason": "The data was incorrect two.",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:43 GMT",
      "id": 3,
      "request_reason": "The data was incorrect two three.",
    },
  ],
  "paging": Object {
    "current": 1,
    "total": 2,
  },
}
`;

exports[`RectificationsProvider should have correct state after fetching processed rectifications 1`] = `
Object {
  "data": Array [
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:24 GMT",
      "id": 4,
      "request_reason": "The data was incorrect.",
      "status": "APPROVED",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:37 GMT",
      "id": 5,
      "request_reason": "The data was incorrect two.",
      "status": "DISAPPROVED",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:43 GMT",
      "id": 6,
      "request_reason": "The data was incorrect two three.",
      "status": "APPROVED",
    },
  ],
  "paging": Object {
    "current": 1,
    "total": 2,
  },
}
`;

exports[`RectificationsProvider should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RectificationsProvider />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": undefined,
      "value": Object {
        "fetchAllRectifications": [Function],
        "fetchPendingRectifications": [Function],
        "fetchProcessedRectifications": [Function],
        "isLoading": false,
        "pendingRectifications": Object {},
        "processedRectifications": Object {},
      },
    },
    "ref": null,
    "rendered": null,
    "type": Object {
      "$$typeof": Symbol(react.provider),
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": [Circular],
        "_calculateChangedBits": null,
        "_changedBits": 0,
        "_changedBits2": 0,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {
          "fetchAllRectifications": [Function],
          "fetchPendingRectifications": [Function],
          "fetchProcessedRectifications": [Function],
          "isLoading": false,
          "pendingRectifications": Object {},
          "processedRectifications": Object {},
        },
        "_currentValue2": Object {
          "fetchAllRectifications": [Function],
          "fetchPendingRectifications": [Function],
          "fetchProcessedRectifications": [Function],
          "isLoading": false,
          "pendingRectifications": Object {},
          "processedRectifications": Object {},
        },
        "_defaultValue": Object {
          "fetchAllRectifications": [Function],
          "fetchPendingRectifications": [Function],
          "fetchProcessedRectifications": [Function],
          "isLoading": false,
          "pendingRectifications": Object {},
          "processedRectifications": Object {},
        },
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": undefined,
        "value": Object {
          "fetchAllRectifications": [Function],
          "fetchPendingRectifications": [Function],
          "fetchProcessedRectifications": [Function],
          "isLoading": false,
          "pendingRectifications": Object {},
          "processedRectifications": Object {},
        },
      },
      "ref": null,
      "rendered": null,
      "type": Object {
        "$$typeof": Symbol(react.provider),
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": [Circular],
          "_calculateChangedBits": null,
          "_changedBits": 0,
          "_changedBits2": 0,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {
            "fetchAllRectifications": [Function],
            "fetchPendingRectifications": [Function],
            "fetchProcessedRectifications": [Function],
            "isLoading": false,
            "pendingRectifications": Object {},
            "processedRectifications": Object {},
          },
          "_currentValue2": Object {
            "fetchAllRectifications": [Function],
            "fetchPendingRectifications": [Function],
            "fetchProcessedRectifications": [Function],
            "isLoading": false,
            "pendingRectifications": Object {},
            "processedRectifications": Object {},
          },
          "_defaultValue": Object {
            "fetchAllRectifications": [Function],
            "fetchPendingRectifications": [Function],
            "fetchProcessedRectifications": [Function],
            "isLoading": false,
            "pendingRectifications": Object {},
            "processedRectifications": Object {},
          },
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
